--- a/Friend_Finder/package.json
+++ b/Friend_Finder/package.json
@@ -1,7 +1,9 @@
 {
   "name": "Friend_Finder",
-  "version": "8.11.3",
+  "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "8.11.3"},
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
